# plantillas

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INDEX.md  INTEGRACION.md  PROMPT_INICIO.md  README.md  ROADMAP.md  claude-init  install.sh  modules.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  ruff.toml  update.sh  validar_repo.py
.claude/: settings.json
agent-config/: README.md  generar_agent_configs.py  plantilla_agent_config.yaml  validar_agent_config.py
agentes/: PLAYBOOK_INICIO.md  ejemplo_agente.md  plantilla_agente.md  validar_agente.py
artefactos/: README.md  validar_artefactos.py
autoresearch/: README.md  ejemplo_autoresearch.md  plantilla_autoresearch.md  validar_autoresearch.py
commands/: ejemplo_command.md  plantilla_command.md  validar_command.py
cuadernos/: README.md  ejemplo_cuadernos.md  plantilla_cuadernos.md  validar_cuadernos.py
docs/: cli.md  diagramas-bloque2.md  dossier-bloque2.html  modules-yaml.md  post-merge-template.md  validators.md
dot-claude/: validar_dot_claude.py
estandares/: ESTANDARES.md  README.md  validar_estandares.py
hooks/: HOOK.md  ejemplo_hook.sh.template  plantilla_hook.sh.template  validar_hook.py
knowledge/: README.md  ejemplo_knowledge.md  multirooterso.md  plantilla_knowledge.md  roadmap-omnios-illumos.md  validar_knowledge.py
mceod-overlays/: CHANGELOG.md  README.md  validar_mceod_overlays.py
mcp/: validar_mcp.py
miniapps/: README.md  ejemplo_miniapps.md  plantilla_miniapps.md  validar_miniapps.py
(+284 files in other folders)
